Refactored DB role.

--- a/roles/db/tasks/main.yml
+++ b/roles/db/tasks/main.yml
@@ -1,38 +1,53 @@
 ---
+- name: Add MariaDB repository
+  ansible.builtin.copy:
+    src: MariaDB.repo
+    dest: /etc/yum.repos.d/MariaDB.repo
+
 - name: Install MariaDB server
-  yum:
+  ansible.builtin.yum:
     name:
-      - mariadb-server
-      - mariadb
+      - MariaDB-server
+      - MariaDB-client
     update_cache: true
     state: present
 
 - name: Start and enable MariaDB server
-  service:
+  ansible.builtin.service:
     name: mariadb
     enabled: true
     state: started
 
 - name: Adds Python MySQL support
-  yum:
+  ansible.builtin.yum:
     name: MySQL-python
     update_cache: true
     state: present
 
-- name: test mysql_secure_installation
-  mysql_secure_installation:
-    login_password: ""
-    new_password: "{{ mysql_root_password }}"
-    user: root
-    login_host: localhost
-    hosts: ['localhost', '127.0.0.1', '::1']
-    change_root_password: true
-    remove_anonymous_user: true
-    disallow_root_login_remotely: true
-    remove_test_db: true
+- name: Set up root user
+  community.mysql.mysql_user:
+    name: root
+    password: "{{ mysql_root_password }}"
+    login_user: root
+    login_password: "{{ mysql_root_password }}"
+    check_implicit_admin: true
+
+- name: Remove anonymous users
+  community.mysql.mysql_user:
+    name: ""
+    state: absent
+    login_user: root
+    login_password: "{{ mysql_root_password }}"
+
+- name: Remove test database
+  community.mysql.mysql_db:
+    name: "test"
+    state: absent
+    login_user: root
+    login_password: "{{ mysql_root_password }}"
 
 - name: Cteate '/root/.my.cnf' file
-  template:
+  ansible.builtin.template:
     src: my.cnf.j2
     dest: /root/.my.cnf
     mode: 0600
